--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,24 @@
-.nav {
-    padding: 60px;
-    text-align: center;
-    background: #1abc9c;
-    color: rgb(83, 82, 82);
-    font-size: 30px;   
+:root {
+--text-color: #1a1c20;
+--link-color: #4a76ee;
+--background-color: #eeeff1;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: "Poppins", sans-serif;
+    background-color: var(--background-color);
+}
+
+a {
+   color: var(--link-color); 
+   text-decoration: none;
 }
