--- a/styles.css
+++ b/styles.css
@@ -84,13 +84,23 @@ nav .right a {
     border: 2px solid var(--link-color);
     border-radius: 5px;
     margin-right: 10px;
+    margin-bottom: 10px;
+    transition: .1s;
+}
+
+.hero-section .text .links a:hover {
+color: var(--text-color) ;
+border: 2px solid var(--text-color);
 }
 .hero-section .headshot {
-    flex: 2;
-
+    flex: 2; 
 }
 
-
+.hero-section .headshot img {
+    border-radius: 50%;
+    width: 350px;
+    
+}
     @media (max-width: 600px) {
         /* NAVBAR*/
      nav {
