--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,53 @@ border: 2px solid var(--text-color);
     width: 350px;
     
 }
+
+/* SECTION 2: SKILLS*/
+
+.skills-section {
+    padding: 0 50px;
+    margin-bottom: 100px;
+}
+
+.skills-section h2 {
+    text-align: center;
+    font-size: 35px;
+}
+
+.skills-section .text {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.skills-section .cells {
+   display: flex; 
+   justify-content: center;
+   flex-wrap: wrap;
+}
+
+.skills-section .cells .cell {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    padding: 10px 20px;
+    margin: 10px;
+    border: 1.5px solid;
+    color: rgb(0, 0, 0);
+    border-radius: 5px;
+    gap: 10px;
+ }
+
+ .skills-section .cells .cell img {
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+    border-radius: 2px;
+ }
+
+ .skills-section .cells .cell span {
+    font-size: 18px;
+ }
 @media (max-width: 850px) {
     /* SECTION 1 HERO */
     .hero-section .text .h2 {
@@ -147,5 +194,14 @@ border: 2px solid var(--text-color);
 
      .hero-section .text h2 {
         font-size: 30px;
+     }
+
+     /* SECTION 2: SKILLS*/
+     .skills-section {
+        padding: 0 20px;
+     }
+
+     .skills-section .cells .cell span {
+        font-size: 16px;
      }
     }
