--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ html {
 body {
     font-family: "Poppins", sans-serif;
     background-color: var(--background-color);
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 a {
@@ -193,6 +195,58 @@ margin-bottom: 10px;
  .skills-section .cells .cell span {
     font-size: 18px;
  }
+
+ /* SECTION 4: CONTACT*/
+.contact-section {
+    padding: 0 50px;
+    margin-bottom: 100px;
+}
+
+.contact-section h2 {
+    font-size: 35px;
+}
+
+.contact-section .group {
+    display: flex;
+    gap: 50px;
+}
+
+.contact-section .group .text {
+    flex: 3;
+    margin-top: 20px;
+}
+
+.contact-section .group form {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-section .group form input,
+.contact-section .group form textarea {
+font-family: "Poppins", sans-serif;
+border: 2px solid var(--link-color);
+background-color: transparent;
+padding:10px;
+margin-bottom: 15px;
+outline: none;
+resize: none;
+}
+
+.contact-section .group form button {
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    color: #fff;
+    background-color: var(--link-color);
+    border: none;
+    height: 50px;
+    cursor: pointer;
+    transition: .1s;
+}
+
+.contact-section .group form button:hover {
+    filter:brightness(.9)
+}
 @media (max-width: 850px) {
     /* SECTION 1 HERO */
     .hero-section .text .h2 {
@@ -208,11 +262,17 @@ margin-bottom: 10px;
     .hero-section .headshot img {
         width: 300px;
     }
+
     /* SECTION 3: TESTIMONY*/
     .testimony-section {
         text-align: center;
     }
     .testimony-section .group {
+        flex-direction: column;
+    }
+
+    /* SECTION 4: CONTACT*/
+    .contact-section .group {
         flex-direction: column;
     }
 }
@@ -252,5 +312,15 @@ margin-bottom: 10px;
 
      .skills-section .cells .cell span {
         font-size: 16px;
+     }
+
+     /* SECTION 3: TESTIMONY */
+     .testimony-section {
+        padding: 0 20px;
+     }
+
+     /* SECTION 4: CONTACT */
+     .contact-section {
+        padding: 0 20px;
      }
     }
